--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
 </head>
 <body>
 <div class="container">
-
+    <nav class="navbar navbar-expand-lg navbar-light header-menu">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand justify-content-center" href="#"><img class="justify-content-center" src="assets/images/hapo_learn.png" alt="Hapo Learn"></a>
+        <div class="collapse navbar-collapse justify-content-end menu" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item text-center">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item text-center">
+                    <a class="nav-link" href="#">All Sources</a>
+                </li>
+                <li class="nav-item text-center">
+                    <a class="nav-link" href="#">Login/Register</a>
+                </li>
+                <li class="nav-item text-center">
+                    <a class="nav-link" href="#">Profile</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
