--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </ul>
         </div>
     </nav>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aperiam consequatur corporis ducimus earum eius exercitationem expedita harum hic id iste nemo obcaecati quae qui recusandae reprehenderit, suscipit unde veritatis!</p>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
