--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
     </nav>
 </div>
 
+<div class="banner-first">
+    <p class="banner-first-heading">Learn Anytime, Anywhere <b>at HapoLearn
+        <img src="assets/images/icon-hapo.png" alt="">!</b></p>
+    <p class="banner-first-desc">Interface lessons, "on-the-go" practice, peer support</p>
+    <a class="banner-first-button" href="#"><span>Start Learning Now !</span></a>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
