Fix errors from comments - pull request 1

--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
     </nav>
 </div>
 
-<div class="banner-first">
-    <p class="banner-first-heading">Learn Anytime, Anywhere <b>at HapoLearn
-        <img src="assets/images/icon-hapo.png" alt="">!</b></p>
-    <p class="banner-first-desc">Interface lessons, "on-the-go" practice, peer support</p>
-    <a class="banner-first-button" href="#"><span>Start Learning Now !</span></a>
+<div class="banner-first d-flex align-items-center">
+    <div class="banner-first-content">
+        <dic class="banner-first-content-heading d-block">Learn Anytime, Anywhere</dic>
+        <div class="banner-first-content-bold d-block">at HapoLearn
+            <img src="assets/images/icon-hapo.png" alt="Icon hapo">!
+        </div>
+        <div class="banner-first-content-desc-up d-block">Interface lessons, "on-the-go" practice,</div>
+        <div class="banner-first-content-desc-bot d-block">peer support</div>
+        <a class="btn algin-middle" href="#">Start Learning Now !</a>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
