--- a/index.html
+++ b/index.html
@@ -49,6 +49,93 @@
     </div>
 </div>
 
+<div class="courses container">
+    <div class="row">
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <div class="card-img-top d-flex align-items-center justify-content-center html-css-js">
+                    <img src="assets/images/html-css-js.png" alt="Html, css & js">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Html/Css/js Tutorial</h5>
+                    <p class="card-text">I knew hardly anything about HTML, JS, and CSS before entering New Media. I had coded quite a bit, but never touched anything in regards to web development.</p>
+                    <a href="#" class="btn justify-content-center">Take This Course</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <div class="card-img-top d-flex align-items-center justify-content-center laravel">
+                    <img src="assets/images/laravel-1-white.png" alt="Laravel">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">LARAVEL Tutorial </h5>
+                    <p class="card-text">I knew hardly anything about HTML, JS, and CSS before entering New Media. I had coded quite a bit, but never touched anything in regards to web development.</p>
+                    <a href="#" class="btn">Take This Course</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <div class="card-img-top d-flex align-items-center justify-content-center php">
+                    <img src="assets/images/php-logo.png" alt="Php">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">PHP Tutorial</h5>
+                    <p class="card-text">I knew hardly anything about HTML, JS, and CSS before entering New Media. I had coded quite a bit, but never touched anything in regards to web development.</p>
+                    <a href="#" class="btn">Take This Course</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <span class="other_courses">Other courses</span>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <div class="card-img-top d-flex align-items-center justify-content-center css">
+                    <img src="assets/images/css.png" alt="Html, css & js">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">CSS Tutorial</h5>
+                    <p class="card-text">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
+                    <a href="#" class="btn">Take This Course</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <div class="card-img-top d-flex align-items-center justify-content-center rails">
+                    <img src="assets/images/rails.png" alt="Laravel">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Ruby on rails Tutorial</h5>
+                    <p class="card-text">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
+                    <a href="#" class="btn">Take This Course</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <div class="card-img-top d-flex align-items-center justify-content-center java1">
+                    <img src="assets/images/java1.png" alt="Php">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Java Tutorial</h5>
+                    <p class="card-text">I knew hardly anything about HTML, JS, and CSS before entering New Media,...</p>
+                    <a href="#" class="btn">Take This Course</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <a class="view-all" href="#">View All Our Courses
+            <img src="assets/images/icon-muiten.png" alt="View All Our Courses">
+        </a>
+    </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
