--- a/index.html
+++ b/index.html
@@ -136,6 +136,33 @@
     </div>
 </div>
 
+<div class="why-hapolearn container-fluid align-items-center">
+    <div class="row align-items-center">
+        <div class="why-hapolearn-text col-md-6 d-flex flex-column">
+            <h3>Why HapoLearn?</h3>
+            <div class="text-content">
+                <i class="fas fa-check-circle"></i>Interactive lessons, "on-the-go" practice, peer support.
+            </div>
+            <div class="text-content">
+                <i class="fas fa-check-circle"></i>Interactive lessons, "on-the-go" practice, peer support.
+            </div>
+            <div class="text-content">
+                <i class="fas fa-check-circle"></i>Interactive lessons, "on-the-go" practice, peer support.
+            </div>
+            <div class="text-content">
+                <i class="fas fa-check-circle"></i>Interactive lessons, "on-the-go" practice, peer support.
+            </div>
+            <div class="text-content">
+                <i class="fas fa-check-circle"></i>Interactive lessons, "on-the-go" practice, peer support.
+            </div>
+        </div>
+        <div class="multi-device-img col-md-6 d-flex align-items-center">
+            <img src="assets/images/multi-device-img.png" alt="Multi device img">
+        </div>
+    </div>
+    <div class="mb-img"></div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
