Fix using tag <img>

--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
             <img src="assets/images/multi-device-img.png" alt="Multi device img">
         </div>
     </div>
-    <div class="mb-img"></div>
+    <div class="mb-img">
+        <img src="assets/images/mb.png" alt="mb">
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
