--- a/index.html
+++ b/index.html
@@ -165,6 +165,82 @@
     </div>
 </div>
 
+<div class="container feedback">
+    <div class="feedback-title text-center">
+        <span class="feedback-title-text">Feedback</span>
+    </div>
+    <div class="feedback-intro">
+        <p>What other students turned professionals have to say about us after learning with us and reaching their goals</p>
+    </div>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="feedback-border">
+                    <div class="feedback-border-text">“A wonderful course on how to start. Eddie beautifully conveys all essentials of a becoming a good Angular developer. Very glad to have taken this course. Thank you Eddie Bryan.”</div>
+                </div>
+                <div class="feedback-info d-flex">
+                    <img src="assets/images/avatar.png" class="rounded-circle feedback-info-img" alt="Avatar">
+                    <div class="card-body">
+                        <div class="feedback-info-title">Hoang Anh Nguyen</div>
+                        <div class="feedback-info-subtitle">PHP</div>
+                        <div class="feedback-info-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="feedback-border">
+                    <div class="feedback-border-text">“A wonderful course on how to start. Eddie beautifully conveys all essentials of a becoming a good Angular developer. Very glad to have taken this course. Thank you Eddie Bryan.”</div>
+                </div>
+                <div class="feedback-info d-flex">
+                    <img src="assets/images/avatar.png" class="rounded-circle feedback-info-img" alt="Avatar">
+                    <div class="card-body">
+                        <div class="feedback-info-title">Hoang Anh Nguyen</div>
+                        <div class="feedback-info-subtitle">Python</div>
+                        <div class="feedback-info-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="feedback-border">
+                    <div class="feedback-border-text">“A wonderful course on how to start. Eddie beautifully conveys all essentials of a becoming a good Angular developer. Very glad to have taken this course. Thank you Eddie Bryan.”</div>
+                </div>
+                <div class="feedback-info d-flex">
+                    <img src="assets/images/avatar.png" class="rounded-circle feedback-info-img" alt="Avatar">
+                    <div class="card-body">
+                        <div class="feedback-info-title">Hoang Anh Nguyen</div>
+                        <div class="feedback-info-subtitle">Java</div>
+                        <div class="feedback-info-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <i class="far fa-chevron-circle-left"></i>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <i class="far fa-chevron-circle-right"></i>
+        </a>
+    </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
