Fix errors from comments - pull request 2

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <div class="why-hapolearn container-fluid align-items-center">
     <div class="row align-items-center">
         <div class="why-hapolearn-text col-md-6 d-flex flex-column">
-            <h3>Why HapoLearn?</h3>
+            <div class="why-hapolearn-title">Why HapoLearn?</div>
             <div class="text-content">
                 <i class="fas fa-check-circle"></i>Interactive lessons, "on-the-go" practice, peer support.
             </div>
