update class html

--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
     </div>
 </div>
 
-<div class="banner-end justify-content-center align-items-center d-flex flex-column">
-    <div class="banner-end-text text-center">Become a member of our growing community!</div>
+<div class="justify-content-center align-items-center d-flex flex-column banner-end">
+    <div class="text-center banner-end-text">Become a member of our growing community!</div>
     <a class="btn" href="#">Start Learning Now!</a>
 </div>
 
