--- a/index.html
+++ b/index.html
@@ -246,6 +246,26 @@
     <a class="btn" href="#">Start Learning Now!</a>
 </div>
 
+<div class="container d-flex flex-column justify-content-center statistic">
+    <div class="row statistic-title justify-content-center">
+        <span class="statistic-title-underline">Statistic</span>
+    </div>
+    <div class="row statistic-content">
+        <div class="col-12 col-md-4 d-flex flex-column align-items-center">
+            <div class="statistic-content-title">Courses</div>
+            <div class="statistic-content-number">1586</div>
+        </div>
+        <div class="col-12 col-md-4 d-flex flex-column align-items-center">
+            <div class="statistic-content-title">Lessons</div>
+            <div class="statistic-content-number">2,689</div>
+        </div>
+        <div class="col-12 col-md-4 d-flex flex-column align-items-center">
+            <div class="statistic-content-title">Learns</div>
+            <div class="statistic-content-number">16,882</div>
+        </div>
+    </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
