--- a/index.html
+++ b/index.html
@@ -266,6 +266,59 @@
     </div>
 </div>
 
+<div class="footer">
+    <div class="container-fluid">
+        <div class="row footer-on">
+            <div class="col-md-4 col-7 d-flex flex-column justify-content-center footer-logo">
+                <a href="#" class="footer-logo-img">
+                    <img src="assets/images/hapo_learn_white1.png" alt="hapo learn">
+                </a>
+                <p class="footer-logo-text">Interactive lessons, "on-the-go" practice, peer support.</p>
+            </div>
+            <div class="col-md-4 d-flex footer-nav">
+                <nav class="nav flex-column footer-nav-left">
+                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Courses</a>
+                    <a class="nav-link" href="#">Blog</a>
+                </nav>
+                <nav class="nav flex-column footer-nav-right">
+                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#">Terms of Use</a>
+                    <a class="nav-link" href="#">FAQ</a>
+                </nav>
+            </div>
+            <div class="col-md-4 col-5 d-flex align-items-center justify-content-center footer-contact">
+                <a data-toggle="collapse" href="#collapseFacebook" role="button" aria-expanded="false" aria-controls="collapseFacebook">
+                    <i class="fab fa-facebook-f footer-contact-icon"></i>
+                </a>
+                <div class="collapse" id="collapseFacebook">
+                    <div class="">facebook.com/tuyen.dung.haposoft</div>
+                </div>
+
+                <a data-toggle="collapse" href="#collapseCall" role="button" aria-expanded="false" aria-controls="collapseCall">
+                    <i class="fas fa-phone-alt footer-contact-icon"></i>
+                </a>
+                <div class="collapse" id="collapseCall">
+                    <div class="">+84-85-645-9898</div>
+                </div>
+
+                <a data-toggle="collapse" href="#collapseMail" role="button" aria-expanded="false" aria-controls="collapseMail">
+                    <i class="fas fa-envelope footer-contact-icon"></i>
+                </a>
+                <div class="collapse" id="collapseMail">
+                    <div class="">info@haposoft.com</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="d-flex justify-content-center align-items-center copyright">
+        <div class="copyright-text">
+            <i class="far fa-copyright"></i> 2020 HapoLearn, Inc. All rights reserved.
+        </div>
+    </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
