--- a/index.html
+++ b/index.html
@@ -338,12 +338,12 @@
                     <div class="container">
                         <form>
                             <div class="form-group">
-                                <label for="username">Username:</label>
+                                <label class="form-label" for="username">Username:</label>
                                 <input type="email" class="form-control" id="username">
                             </div>
                             <div class="form-group">
-                                <label for="pwd">Password:</label>
-                                <input type="password" class="form-control ipt-pwd" id="pwd">
+                                <label class="form-label" for="pwd">Password:</label>
+                                <input type="password" class="form-control login-pass" id="pwd">
                             </div>
                             <div class="form-group w-100 form-check d-flex align-items-center">
                                 <div class="w-50">
@@ -375,19 +375,19 @@
                     <div class="container">
                         <form>
                             <div class="form-group">
-                                <label for="rUsername">Username:</label>
+                                <label class="form-label" for="rUsername">Username:</label>
                                 <input type="email" class="form-control" id="rUsername">
                             </div>
                             <div class="form-group">
-                                <label for="rEmail">Email:</label>
+                                <label class="form-label" for="rEmail">Email:</label>
                                 <input type="email" class="form-control" id="rEmail">
                             </div>
                             <div class="form-group">
-                                <label for="rPwd">Password:</label>
+                                <label class="form-label" for="rPwd">Password:</label>
                                 <input type="password" class="form-control" id="rPwd">
                             </div>
                             <div class="form-group">
-                                <label for="rRepeatPwd">Repeat password:</label>
+                                <label class="form-label" for="rRepeatPwd">Repeat password:</label>
                                 <input type="password" class="form-control" id="rRepeatPwd">
                             </div>
                             <div class="d-flex justify-content-center btn-cover btn-register">
