--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
     <link rel="stylesheet" href="css/style.css">
     <title>Trang chủ</title>
-    <link rel="shortcut icon" href="assets/images/hapo_learn.png" type="image/png" />
+    <link rel="shortcut icon" href="assets/images/icon-hapo.png" type="image/png" />
 </head>
 <body>
 <div class="container header">
@@ -426,6 +426,28 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="messenger">
+    <div id="messenger-show" class="chatbox">
+        <div class="d-flex align-items-center justify-content-center float-right btn-close-msg"><i class="fas fa-times"></i></div>
+        <div class="chatbox-title">HapoLearn</div>
+        <div class="row chatbox-message">
+            <div class="chatbox-message-logo">
+                <img src="assets/images/icon-hapo.png" alt="Hapo learn">
+            </div>
+            <div class="chatbox-message-text">
+                HapoLearn xin chào bạn.
+                <br>
+                Bạn có cần chúng tôi hỗ trợ gì không?
+            </div>
+        </div>
+        <a href="#" class="d-flex justify-content-center login-msg">
+            <i class="fab fa-facebook-messenger icon-messenger"></i> Đăng nhập vào Messenger
+        </a>
+        <div class="text-center chat-width">Chat với HapoLearn trong Messenger</div>
+    </div>
+    <img class="logo-messenger" alt="Logo messenger" src="./assets/images/logo-msg.png">
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
