--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <link rel="shortcut icon" href="assets/images/icon-hapo.png" type="image/png" />
 </head>
 <body>
-<div class="container header">
+<div class="container-fluid header">
     <nav class="navbar navbar-expand-md navbar-light header-menu">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <i class="fas fa-bars"></i>
         </button>
         <a class="navbar-brand" href="#"><img src="assets/images/hapo_learn.png" alt="hapo learn"></a>
         <div class="collapse navbar-collapse justify-content-end menu" id="navbarSupportedContent">
             <ul class="navbar-nav text-center">
-                <li class="nav-item text-center nav-home active">
+                <li class="nav-item text-center nav-home">
                     <a class="nav-link" href="#">Home</a>
                 </li>
-                <li class="nav-item text-center">
+                <li class="nav-item text-center active">
                     <a class="nav-link" href="#">All Sources</a>
                 </li>
                 <li class="nav-item text-center nav-item-hidden">
@@ -37,7 +37,7 @@
                 <li class="nav-item text-center">
                     <a class="nav-link" href="#" data-toggle="modal" data-target="#modalLoginRegister">Login/Register</a>
                 </li>
-                <li class="nav-item text-center">
+                <li class="nav-item text-center profile">
                     <a class="nav-link" href="#">Profile</a>
                 </li>
             </ul>
@@ -153,19 +153,19 @@
         <div class="why-hapolearn-text col-md-6 d-flex flex-column">
             <div class="why-hapolearn-title">Why HapoLearn?</div>
             <div class="text-content">
-                <i class="fas fa-check-circle"></i>Interactive lessons, "on-the-go" practice, peer support.
+                <i class="fas fa-check-circle"></i><span>Interactive lessons, "on-the-go" practice, peer support.</span>
             </div>
             <div class="text-content">
-                <i class="fas fa-check-circle"></i>Interactive lessons, "on-the-go" practice, peer support.
+                <i class="fas fa-check-circle"></i><span>Interactive lessons, "on-the-go" practice, peer support.</span>
             </div>
             <div class="text-content">
-                <i class="fas fa-check-circle"></i>Interactive lessons, "on-the-go" practice, peer support.
+                <i class="fas fa-check-circle"></i><span>Interactive lessons, "on-the-go" practice, peer support.</span>
             </div>
             <div class="text-content">
-                <i class="fas fa-check-circle"></i>Interactive lessons, "on-the-go" practice, peer support.
+                <i class="fas fa-check-circle"></i><span>Interactive lessons, "on-the-go" practice, peer support.</span>
             </div>
             <div class="text-content">
-                <i class="fas fa-check-circle"></i>Interactive lessons, "on-the-go" practice, peer support.
+                <i class="fas fa-check-circle"></i><span>Interactive lessons, "on-the-go" practice, peer support.</span>
             </div>
         </div>
         <div class="multi-device-img col-md-6 d-flex align-items-center">
@@ -299,13 +299,13 @@
 <div class="footer">
     <div class="container-fluid">
         <div class="row footer-on">
-            <div class="col-md-4 col-7 d-flex flex-column align-items-center justify-content-center footer-logo">
+            <div class="col-md-4 col-4 d-flex flex-column align-items-center justify-content-center footer-logo">
                 <a href="#" class="footer-logo-img">
                     <img src="assets/images/hapo_learn_white1.png" alt="hapo learn">
                 </a>
                 <p class="footer-logo-text">Interactive lessons, "on-the-go" practice, peer support.</p>
             </div>
-            <div class="col-md-4 d-flex footer-nav">
+            <div class="col-md-4 col-12 d-flex footer-nav">
                 <nav class="nav flex-column footer-nav-left">
                     <a class="nav-link" href="#">Home</a>
                     <a class="nav-link" href="#">Features</a>
@@ -318,17 +318,17 @@
                     <a class="nav-link" href="#">FAQ</a>
                 </nav>
             </div>
-            <div class="col-md-4 col-5 d-flex align-items-center justify-content-center contact footer-contact">
+            <div class="col-md-4 col-4 d-flex align-items-center justify-content-center footer-contact">
                 <div class="d-inline-flex footer-icon">
-                    <a href="#"  class="footer-icon-fb">
+                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="fb/tuyen.dung.haposoft" class="footer-icon-fb a-link">
                         <img src="./assets/images/fb.png" alt="icon-fb">
-                        <div class="txt-hidden-fb">facebook.com/tuyen.dung.haposoft</div>
+                        <div class="txt-hidden-fb">fb/tuyen.dung.haposoft</div>
                     </a>
-                    <a href="#" class="footer-icon-phone">
+                    <a href="#" class="footer-icon-phone a-link">
                         <img src="./assets/images/call.png" alt="icon-phone">
                         <div class="txt-hidden-phone">+84-85-645-9898</div>
                     </a>
-                    <a href="#" class="footer-icon-mail">
+                    <a href="#" class="footer-icon-mail a-link">
                         <img src="./assets/images/mail.png" alt="icon-mail">
                         <div class="txt-hidden-mail">info@haposoft.com</div>
                     </a>
@@ -415,7 +415,7 @@
                                 <input type="password" class="form-control" id="rPwd">
                             </div>
                             <div class="form-group">
-                                <label class="form-label" for="rRepeatPwd">Repeat password:</label>
+                                <label class="form-label" for="rRepeatPwd">Repeat Password:</label>
                                 <input type="password" class="form-control" id="rRepeatPwd">
                             </div>
                             <div class="d-flex justify-content-center btn-register">
@@ -453,7 +453,8 @@
     <img class="logo-messenger" alt="Logo messenger" src="./assets/images/logo-msg.png">
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
