--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
     <link rel="stylesheet" href="css/style.css">
-    <title>Trang chủ</title>
+    <title>Home</title>
     <link rel="shortcut icon" href="assets/images/icon-hapo.png" type="image/png" />
 </head>
 <body>
