--- a/index.html
+++ b/index.html
@@ -45,23 +45,25 @@
     </nav>
 </div>
 
-<div class="banner-first d-flex align-items-center">
-    <div class="banner-first-content">
-        <dic class="banner-first-content-heading d-block">Learn Anytime, Anywhere</dic>
-        <div class="banner-first-content-bold d-block">at HapoLearn
-            <img src="assets/images/icon-hapo.png" alt="Icon hapo">!
+<div class="cih">
+    <div class="d-flex align-items-center banner-first ">
+        <div class="banner-first-content">
+            <dic class="banner-first-content-heading d-block">Learn Anytime, Anywhere</dic>
+            <div class="banner-first-content-bold d-block">at HapoLearn
+                <img src="assets/images/icon-hapo.png" alt="Icon hapo">!
+            </div>
+            <div class="banner-first-content-desc-up d-block">Interface lessons, "on-the-go" practice,</div>
+            <div class="banner-first-content-desc-bot d-block">peer support</div>
+            <a class="btn d-flex align-items-center justify-content-center" href="#">Start Learning Now !</a>
         </div>
-        <div class="banner-first-content-desc-up d-block">Interface lessons, "on-the-go" practice,</div>
-        <div class="banner-first-content-desc-bot d-block">peer support</div>
-        <a class="btn d-flex align-items-center justify-content-center" href="#">Start Learning Now !</a>
     </div>
 </div>
 
-<div class="linear-gradient">
+<div class="linear-gradient cih">
     <div class="transition-block"></div>
 </div>
 
-<div class="courses container">
+<div class="container courses cih">
     <div class="row">
         <div class="col-12 col-md-4">
             <div class="card">
@@ -148,7 +150,7 @@
     </div>
 </div>
 
-<div class="why-hapolearn container-fluid align-items-center">
+<div class="container-fluid align-items-center why-hapolearn cih">
     <div class="row align-items-center">
         <div class="why-hapolearn-text col-md-6 d-flex flex-column">
             <div class="why-hapolearn-title">Why HapoLearn?</div>
@@ -177,7 +179,7 @@
     </div>
 </div>
 
-<div class="container feedback">
+<div class="container feedback cih">
     <div class="feedback-title text-center">
         <span class="feedback-title-text">Feedback</span>
     </div>
@@ -271,12 +273,14 @@
     </div>
 </div>
 
-<div class="justify-content-center align-items-center d-flex flex-column banner-end">
-    <div class="text-center banner-end-text">Become a member of our growing community!</div>
-    <a class="btn" href="#">Start Learning Now!</a>
+<div class="cih">
+    <div class="d-flex flex-column align-items-center justify-content-center banner-end">
+        <div class="text-center banner-end-text">Become a member of our growing community!</div>
+        <a class="btn" href="#">Start Learning Now!</a>
+    </div>
 </div>
 
-<div class="container d-flex flex-column justify-content-center statistic">
+<div class="container statistic cih">
     <div class="row statistic-title justify-content-center">
         <span class="statistic-title-underline">Statistic</span>
     </div>
@@ -296,7 +300,7 @@
     </div>
 </div>
 
-<div class="footer">
+<div class="footer cih">
     <div class="container-fluid">
         <div class="row footer-on">
             <div class="col-md-4 col-4 d-flex flex-column align-items-center justify-content-center footer-logo">
@@ -429,7 +433,7 @@
     </div>
 </div>
 
-<div class="messenger">
+<div class="messenger cih">
     <div id="messenger-show" class="chatbox">
         <div class="d-flex align-items-center justify-content-center float-right btn-close-msg">
             <i class="fas fa-times"></i>
